--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "com.nikolai.imagedraw.draw_on_image_plugin"
     compileSdkVersion 30
 
     sourceSets {
